# atoma-infer

./: .env.development  .env.production  .gitignore  .gitmodules  Cargo.toml  README.md  a.txt  c.txt  deny.toml  flake.nix  k  q  rustfmt.toml  taplo.fmt  v
.github/workflows/: ci.yaml  server_integration_tests.yml
backends/: Cargo.toml
backends/src/: lib.rs
backends/vllm/: Cargo.toml  block_allocator.rs  evictor.rs  lib.rs  policy.rs  tokenizer.rs  validation.rs
backends/vllm/src/: block.rs  block_allocator.rs  block_manager.rs  config.rs  evictor.rs  lib.rs  llm_engine.rs  llm_service.rs  model_executor.rs  sampling_params.rs  scheduler.rs  sequence.rs  tokenizer.rs  types.rs  validation.rs  worker.rs
backends/vllm/src/models/: llama.rs  llama_nccl.rs  mod.rs
backends/vllm/src/tests/: llama.rs  llama_nccl.rs  mod.rs  test_config.toml  test_config_enable_chunked_prefill.toml  test_config_nccl.toml
csrc/: Cargo.toml  a.txt  build.rs
csrc/kernels/: cache_manager.cu  flash.h  flash_api.cpp  flash_api.cu  flash_fwd_hdim128_bf16_causal_sm80.cu  flash_fwd_hdim128_bf16_sm80.cu  flash_fwd_hdim128_fp16_causal_sm80.cu  flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_hdim160_bf16_causal_sm80.cu  flash_fwd_hdim160_bf16_sm80.cu  flash_fwd_hdim160_fp16_causal_sm80.cu  flash_fwd_hdim160_fp16_sm80.cu  flash_fwd_hdim192_bf16_causal_sm80.cu  flash_fwd_hdim192_bf16_sm80.cu  flash_fwd_hdim192_fp16_causal_sm80.cu  flash_fwd_hdim192_fp16_sm80.cu  flash_fwd_hdim224_bf16_causal_sm80.cu  flash_fwd_hdim224_bf16_sm80.cu  flash_fwd_hdim224_fp16_causal_sm80.cu  flash_fwd_hdim224_fp16_sm80.cu  flash_fwd_hdim256_bf16_causal_sm80.cu  flash_fwd_hdim256_bf16_sm80.cu  flash_fwd_hdim256_fp16_causal_sm80.cu  flash_fwd_hdim256_fp16_sm80.cu  flash_fwd_hdim32_bf16_causal_sm80.cu  flash_fwd_hdim32_bf16_sm80.cu  flash_fwd_hdim32_fp16_causal_sm80.cu  flash_fwd_hdim32_fp16_sm80.cu  flash_fwd_hdim64_fp16_causal_sm80.cu  flash_fwd_hdim64_fp16_sm80.cu  flash_fwd_hdim96_bf16_causal_sm80.cu  flash_fwd_hdim96_bf16_sm80.cu  flash_fwd_hdim96_fp16_causal_sm80.cu  flash_fwd_hdim96_fp16_sm80.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  flash_fwd_split_hdim128_bf16_causal_sm80.cu  flash_fwd_split_hdim128_bf16_sm80.cu  flash_fwd_split_hdim128_fp16_causal_sm80.cu  flash_fwd_split_hdim128_fp16_sm80.cu  (+31 more)
csrc/src/: cache_manager.rs  ffi.rs  lib.rs  ops.rs
csrc/tests/: cache_manager_tests.rs  flash_attn_tests.rs
help/: Cargo.toml
help/src/: lib.rs
models/: Cargo.toml
models/src/: flash_attention.rs  lib.rs  llama.rs  llama_nccl.rs  mistral.rs  multi_gpu.rs
server/: Cargo.toml  request_schema.json
server/src/: api.rs  config.rs  main.rs  server.rs  stream.rs
server/src/api/: chat_completions.rs  model_info.rs  validate_schema.rs
server/src/tests/: mod.rs  test_chat_completions.rs
server/src/tests/common/: mod.rs
serving/: Cargo.toml
serving/src/: block.rs  block_manager.rs  llm_engine.rs  model_executor.rs  scheduler.rs  sequence.rs  worker.rs
serving/src/models/: llama.rs
serving/src/tests/: mod.rs
src/: flash_attention.rs  lib.rs  llama.rs  main.rs
src/backend/: mod.rs
src/kernels/: attention_dtypes.h  attention_generic.cuh  attention_kernels.cu  attention_utils.cuh  cache_kernels.cu  cuda_compat.h  dtype_bfloat16.cuh  ffi.rs
src/kernels/attention/: attention_dtypes.h  attention_kernels.cu  attention_utils.cuh
src/models/: llama.rs  mistra.rs  mistral.rs  mod.rs  phi3.rs  phy3.rs
src/paged_attention/: mod.rs
src/paged_models/: llama.rs
src/pagedattention/: mod.rs
src/quantization/: quant_utils.cuh
src/quantization/fp8/: cache_kernels.cu  cuda_compat.h  dispatch_utils.h
src/quantization/fp8/amd/: quant_utils.cuh
src/quantization/fp8/nvidia/: quant_utils.cuh
