[workspace]
resolver = "2"

members = [
    "csrc",
    "models",
    "server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.89"
axum = "0.7"
bindgen_cuda = "0.1.5"
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
candle-examples = "0.6.0"
csrc = { path = "csrc" }
cuda-runtime-sys = "0.3.0-alpha.1"
cuda-sys = "0.2.0"
expect-test = "1.5"
futures = "0.3.30"
half = "2.4.1"
help = { path = "help" }
hf-hub = "0.3.2"
indexmap = "2.2.6"
metrics = "0.23"
metrics-exporter-prometheus = "0.14.0"
models = { path = "models" }
rand = "0.8.5"
serde = "1.0.204"
serde_json = "1.0.120"
serial_test = "3.1.1"
thiserror = "1.0.64"
tokenizers = "0.19.1"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
