[package]
name = "csrc"
version = "0.1.0"
edition = "2021"
description = "Flash and paged attention kernels for Atoma"
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
candle-core = { version = "0.6.0", features = ["cuda"] }
cuda-runtime-sys = "0.3.0-alpha.1"
cuda-sys = "0.2.0"
half = { version = "2.4.1", features = ["num-traits"] }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bindgen_cuda = "0.1.5"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
candle-nn = { version = "0.6.0", features = ["cuda"] }
serial_test = "3.1.1"
