[package]
name = "csrc"
version = "0.1.0"
edition = "2021"
description = "Flash attention 2 kernels, with paged attention enabled"
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
candle-core = { workspace = true, features = ["cuda"] }
cuda-runtime-sys = { workspace = true }
half = { workspace = true, features = ["num-traits"] }
help = { workspace = true }

[build-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
bindgen_cuda = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
candle-nn = { workspace = true, features = ["cuda"] }
serial_test = { workspace = true }
