[package]
name = "atoma-node-inference-server"
version.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
jsonschema = "0.20"
schemars = "0.8"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
expect-test.workspace = true
