[package]
name = "atoma-infer-server"
version.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
atoma-backends.workspace = true
clap = { workspace = true, features = ["derive"] }
flume.workspace = true
futures.workspace = true
jsonschema = "0.20"
schemars = "0.8"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

[dev-dependencies]
expect-test.workspace = true
async-openai.workspace = true

[features]
vllm = ["atoma-backends/vllm"]
nccl = ["vllm", "atoma-backends/nccl"]
