[package]
name = "serving"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models.workspace = true
candle-core = { version = "0.6.0", features = ["cuda"] }
candle-nn = { version = "0.6.0", features = ["cuda"] }
candle-transformers = { version = "0.6.0", features = ["cuda"] }
futures.workspace = true
hf-hub.workspace = true
indexmap.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tokio = { workspace = true, features = ["macros", "fs"] }
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
tracing-subscriber.workspace = true
tokenizers = { workspace = true, features = ["http"] }
