[package]
name = "atoma-vllm-backend"
version.workspace = true
edition.workspace = true

[dependencies]
candle-core = { workspace = true, features = ["cuda"] }
candle-nn = { workspace = true, features = ["cuda"] }
candle-transformers = { workspace = true, features = ["cuda"] }
config.workspace = true
cudarc = { workspace = true, optional = true }
cuda-runtime-sys.workspace = true
dotenv.workspace = true
futures.workspace = true
flume.workspace = true
hf-hub.workspace = true
indexmap.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
models.workspace = true
serde.workspace = true
serde_json.workspace = true
sys-info.workspace = true
tokenizers.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "fs"] }

[dev-dependencies]
rand.workspace = true
tracing-subscriber.workspace = true
tokenizers = { workspace = true, features = ["http"] }

[features]
nccl = ["dep:cudarc", "cudarc/nccl", "models/nccl"]